fix: tag spacing

--- a/src/components/tag/Tag.module.css
+++ b/src/components/tag/Tag.module.css
@@ -38,7 +38,7 @@
   }
 
   position: relative;
-  padding: 8px;
+  padding: 2px 8px;
   border: 1px solid transparent;
   border-radius: var(--form-border-radius);
   box-shadow: var(--form-box-shadow);
@@ -47,7 +47,6 @@
 
 
   & .text {
-    line-height: 0;
     font-size: 12px;
     color: var(--white)
   }
